# master-parser-lab-session2

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in  container.hpp  division.spl  faulty.spl  isatty.hpp  main.cpp  parameters.hpp  spl_lexer.hpp  spl_lexer.l  spl_parser.y  tree.cpp  tree.hpp
.github/workflows/: cmake-single-platform.yml
samples/: comments.spl  wrong_assign.spl
